// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailVerify /> Component should match component snapshot 1`] = `
<div>
  <h2>
    Verifying Email
  </h2>
  <div
    className="loader"
  />
</div>
`;

exports[`<EmailVerify /> Component should render initial layout of EmailVerify 1`] = `
Array [
  <div>
    <h2>
      Verifying Email
    </h2>
    <div
      className="loader"
    />
  </div>,
]
`;
